install(FILES  
breeze-dark/dk_configure-shortcuts.svg
breeze-dark/dk_configure.svg
breeze-dark/dk_configure-toolbars.svg
breeze-dark/dk_document-new.svg
breeze-dark/dk_document-open-recent.svg
breeze-dark/dk_document-open.svg
breeze-dark/dk_document-save-as.svg
breeze-dark/dk_document-save.svg
breeze-dark/dk_hint.svg
breeze-dark/dk_kdenlive-add-clip.svg
breeze-dark/dk_kdenlive-add-color-clip.svg
breeze-dark/dk_kdenlive-add-slide-clip.svg
breeze-dark/dk_kdenlive-add-text-clip.svg
breeze-dark/dk_kdenlive-align-bottom.svg
breeze-dark/dk_kdenlive-align-hor.svg
breeze-dark/dk_kdenlive-align-left.svg
breeze-dark/dk_kdenlive-align-none.svg
breeze-dark/dk_kdenlive-align-right.svg
breeze-dark/dk_kdenlive-align-top.svg
breeze-dark/dk_kdenlive-align-vert.svg
breeze-dark/dk_kdenlive-custom-effect.svg
breeze-dark/dk_kdenlive-composite.svg
breeze-dark/dk_kdenlive-no-composite.svg
breeze-dark/dk_kdenlive-deleffect.svg
breeze-dark/dk_kdenlive-down.svg
breeze-dark/dk_kdenlive-hide-audio.svg
breeze-dark/dk_kdenlive-hide-video.svg
breeze-dark/dk_kdenlive-insert-edit.svg
breeze-dark/dk_kdenlive-insert-rect.svg
breeze-dark/dk_kdenlive-insert-unicode.svg
breeze-dark/dk_kdenlive-lock.svg
breeze-dark/dk_kdenlive-menu.svg
breeze-dark/dk_kdenlive-normal-edit.svg
breeze-dark/dk_kdenlive-object-height.svg
breeze-dark/dk_kdenlive-object-width.svg
breeze-dark/dk_kdenlive-overwrite-edit.svg
breeze-dark/dk_kdenlive-select-all.svg
breeze-dark/dk_kdenlive-select-images.svg
breeze-dark/dk_kdenlive-select-rects.svg
breeze-dark/dk_kdenlive-select-texts.svg
breeze-dark/dk_kdenlive-select-tool.svg
breeze-dark/dk_kdenlive-show-audio.svg
breeze-dark/dk_kdenlive-show-audiothumb.svg
breeze-dark/dk_kdenlive-show-markers.svg
breeze-dark/dk_kdenlive-show-video.svg
breeze-dark/dk_kdenlive-show-videothumb.svg
breeze-dark/dk_kdenlive-snap.svg
breeze-dark/dk_kdenlive-spacer-tool.svg
breeze-dark/dk_kdenlive-split-audio.svg
breeze-dark/dk_kdenlive-track_has_effect.svg
breeze-dark/dk_kdenlive-unlock.svg
breeze-dark/dk_kdenlive-unselect-all.svg
breeze-dark/dk_kdenlive-up.svg
breeze-dark/dk_kdenlive-zindex-bottom.svg
breeze-dark/dk_kdenlive-zindex-down.svg
breeze-dark/dk_kdenlive-zindex-top.svg
breeze-dark/dk_kdenlive-zindex-up.svg
breeze-dark/dk_kdenlive-zone-end.svg
breeze-dark/dk_kdenlive-zone-start.svg
breeze-dark/dk_kdenlive-zoom-large.svg
breeze-dark/dk_kdenlive-zoom-small.svg
breeze-dark/dk_media-optical.svg
breeze-dark/dk_settings-configure.svg
breeze-dark/dk_visibility.svg
breeze-dark/dk_document-revert.svg
breeze-dark/dk_edit-rename.svg
breeze-dark/dk_edit-copy.svg
breeze-dark/dk_edit-paste.svg
breeze-dark/dk_edit-undo.svg
breeze-dark/dk_edit-redo.svg
breeze-dark/dk_edit-delete.svg
breeze-dark/dk_edit-download.svg
breeze-dark/dk_folder-new.svg
breeze-dark/dk_document-edit.svg
breeze-dark/dk_view-refresh.svg
breeze-dark/dk_tools-wizard.svg
breeze-dark/dk_media-record.svg
breeze-dark/dk_media-playback-start.svg
breeze-dark/dk_media-playback-stop.svg
breeze-dark/dk_media-playback-pause.svg
breeze-dark/dk_media-playlist-repeat.svg
breeze-dark/dk_media-seek-backward.svg
breeze-dark/dk_media-seek-forward.svg
breeze-dark/dk_media-skip-backward.svg
breeze-dark/dk_media-skip-forward.svg
breeze-dark/dk_help-hint.svg
breeze-dark/dk_object-ungroup.svg
breeze-dark/dk_object-group.svg
breeze-dark/dk_measure.svg
breeze-dark/dk_edit-select.svg
breeze-dark/dk_edit-cut.svg
breeze-dark/dk_bookmark-new.svg
breeze-dark/dk_document-properties.svg
breeze-dark/dk_go-jump-definition.svg
breeze-dark/dk_go-jump.svg
breeze-dark/dk_cursor-arrow.svg
breeze-dark/dk_distribute-horizontal-x.svg
breeze-dark/dk_zoom-in.svg
breeze-dark/dk_zoom-out.svg
breeze-dark/dk_view-fullscreen.svg
breeze-dark/dk_zoom-fit-best.svg
breeze-dark/dk_go-first.svg
breeze-dark/dk_go-last.svg
breeze-dark/dk_document-save-all.svg
breeze-dark/dk_edit-clear.svg
breeze-dark/dk_edit-find.svg
breeze-dark/dk_go-next.svg
breeze-dark/dk_go-previous.svg
breeze-dark/dk_view-list-tree.svg
breeze-dark/dk_view-list-icons.svg
breeze-dark/dk_go-up.svg
breeze-dark/dk_go-down.svg
breeze-dark/dk_list-add.svg
breeze-dark/dk_list-remove.svg
breeze-dark/dk_help-about.svg
breeze-dark/dk_trash-empty.svg
breeze-dark/dk_edit-link.svg
breeze-dark/dk_favorite.svg
breeze-dark/dk_dialog-cancel.svg
breeze-dark/dk_system-run.svg
breeze-dark/dk_dialog-close.svg
breeze-dark/dk_dialog-ok.svg
breeze-dark/dk_kdenlive-show-all-effects.svg
breeze-dark/dk_kdenlive-show-gpu.svg
breeze-dark/dk_audio-volume-medium.svg
breeze-dark/dk_audio-volume-muted.svg
breeze-dark/dk_view-split-left-right.svg
breeze-dark/dk_transform-scale.svg
breeze-dark/dk_transform-crop.svg
breeze-dark/dk_zoom-fit-width.svg
breeze-dark/dk_zoom-fit-height.svg
breeze-dark/dk_color-picker.svg
breeze-dark/dk_view-grid.svg
breeze-dark/dk_draw-bezier-curves.svg
breeze-dark/dk_transform-move.svg
breeze-dark/dk_insert-horizontal-rule.svg
breeze-dark/dk_draw-line.svg
breeze-dark/dk_chronometer.svg


breeze-light/lt_configure-shortcuts.svg
breeze-light/lt_configure.svg
breeze-light/lt_configure-toolbars.svg
breeze-light/lt_document-new.svg
breeze-light/lt_document-open-recent.svg
breeze-light/lt_document-open.svg
breeze-light/lt_document-save-as.svg
breeze-light/lt_document-save.svg
breeze-light/lt_hint.svg
breeze-light/lt_kdenlive-add-clip.svg
breeze-light/lt_kdenlive-add-color-clip.svg
breeze-light/lt_kdenlive-add-slide-clip.svg
breeze-light/lt_kdenlive-add-text-clip.svg
breeze-light/lt_kdenlive-align-bottom.svg
breeze-light/lt_kdenlive-align-hor.svg
breeze-light/lt_kdenlive-align-left.svg
breeze-light/lt_kdenlive-align-none.svg
breeze-light/lt_kdenlive-align-right.svg
breeze-light/lt_kdenlive-align-top.svg
breeze-light/lt_kdenlive-align-vert.svg
breeze-light/lt_kdenlive-custom-effect.svg
breeze-light/lt_kdenlive-composite.svg
breeze-light/lt_kdenlive-no-composite.svg
breeze-light/lt_kdenlive-deleffect.svg
breeze-light/lt_kdenlive-down.svg
breeze-light/lt_kdenlive-hide-audio.svg
breeze-light/lt_kdenlive-hide-video.svg
breeze-light/lt_kdenlive-insert-edit.svg
breeze-light/lt_kdenlive-insert-rect.svg
breeze-light/lt_kdenlive-insert-unicode.svg
breeze-light/lt_kdenlive-lock.svg
breeze-light/lt_kdenlive-menu.svg
breeze-light/lt_kdenlive-normal-edit.svg
breeze-light/lt_kdenlive-object-height.svg
breeze-light/lt_kdenlive-object-width.svg
breeze-light/lt_kdenlive-overwrite-edit.svg
breeze-light/lt_kdenlive-select-all.svg
breeze-light/lt_kdenlive-select-images.svg
breeze-light/lt_kdenlive-select-rects.svg
breeze-light/lt_kdenlive-select-texts.svg
breeze-light/lt_kdenlive-select-tool.svg
breeze-light/lt_kdenlive-show-audio.svg
breeze-light/lt_kdenlive-show-audiothumb.svg
breeze-light/lt_kdenlive-show-markers.svg
breeze-light/lt_kdenlive-show-video.svg
breeze-light/lt_kdenlive-show-videothumb.svg
breeze-light/lt_kdenlive-snap.svg
breeze-light/lt_kdenlive-spacer-tool.svg
breeze-light/lt_kdenlive-split-audio.svg
breeze-light/lt_kdenlive-track_has_effect.svg
breeze-light/lt_kdenlive-unlock.svg
breeze-light/lt_kdenlive-unselect-all.svg
breeze-light/lt_kdenlive-up.svg
breeze-light/lt_kdenlive-zindex-bottom.svg
breeze-light/lt_kdenlive-zindex-down.svg
breeze-light/lt_kdenlive-zindex-top.svg
breeze-light/lt_kdenlive-zindex-up.svg
breeze-light/lt_kdenlive-zone-end.svg
breeze-light/lt_kdenlive-zone-start.svg
breeze-light/lt_kdenlive-zoom-large.svg
breeze-light/lt_kdenlive-zoom-small.svg
breeze-light/lt_media-optical.svg
breeze-light/lt_settings-configure.svg
breeze-light/lt_visibility.svg
breeze-light/lt_document-revert.svg
breeze-light/lt_document-edit.svg
breeze-light/lt_edit-rename.svg
breeze-light/lt_edit-copy.svg
breeze-light/lt_edit-paste.svg
breeze-light/lt_edit-undo.svg
breeze-light/lt_edit-redo.svg
breeze-light/lt_edit-delete.svg
breeze-light/lt_edit-download.svg
breeze-light/lt_folder-new.svg
breeze-light/lt_view-refresh.svg
breeze-light/lt_tools-wizard.svg
breeze-light/lt_media-record.svg
breeze-light/lt_media-playback-start.svg
breeze-light/lt_media-playback-stop.svg
breeze-light/lt_media-playback-pause.svg
breeze-light/lt_media-playlist-repeat.svg
breeze-light/lt_media-seek-backward.svg
breeze-light/lt_media-seek-forward.svg
breeze-light/lt_media-skip-backward.svg
breeze-light/lt_media-skip-forward.svg
breeze-light/lt_help-hint.svg
breeze-light/lt_object-ungroup.svg
breeze-light/lt_object-group.svg
breeze-light/lt_measure.svg
breeze-light/lt_edit-select.svg
breeze-light/lt_edit-cut.svg
breeze-light/lt_bookmark-new.svg
breeze-light/lt_document-properties.svg
breeze-light/lt_go-jump-definition.svg
breeze-light/lt_go-jump.svg
breeze-light/lt_cursor-arrow.svg
breeze-light/lt_distribute-horizontal-x.svg
breeze-light/lt_zoom-in.svg
breeze-light/lt_zoom-out.svg
breeze-light/lt_view-fullscreen.svg
breeze-light/lt_zoom-fit-best.svg
breeze-light/lt_go-first.svg
breeze-light/lt_go-last.svg
breeze-light/lt_document-save-all.svg
breeze-light/lt_edit-clear.svg
breeze-light/lt_edit-find.svg
breeze-light/lt_go-next.svg
breeze-light/lt_go-previous.svg
breeze-light/lt_view-list-tree.svg
breeze-light/lt_view-list-icons.svg
breeze-light/lt_go-up.svg
breeze-light/lt_go-down.svg
breeze-light/lt_list-add.svg
breeze-light/lt_list-remove.svg
breeze-light/lt_help-about.svg
breeze-light/lt_trash-empty.svg
breeze-light/lt_edit-link.svg
breeze-light/lt_favorite.svg
breeze-light/lt_dialog-cancel.svg
breeze-light/lt_system-run.svg
breeze-light/lt_dialog-close.svg
breeze-light/lt_dialog-ok.svg
breeze-light/lt_kdenlive-show-all-effects.svg
breeze-light/lt_kdenlive-show-gpu.svg
breeze-light/lt_audio-volume-medium.svg
breeze-light/lt_audio-volume-muted.svg
breeze-light/lt_view-split-left-right.svg
breeze-light/lt_transform-scale.svg
breeze-light/lt_transform-crop.svg
breeze-light/lt_zoom-fit-width.svg
breeze-light/lt_zoom-fit-height.svg
breeze-light/lt_color-picker.svg
breeze-light/lt_view-grid.svg
breeze-light/lt_draw-bezier-curves.svg
breeze-light/lt_transform-move.svg
breeze-light/lt_insert-horizontal-rule.svg
breeze-light/lt_draw-line.svg
breeze-light/lt_chronometer.svg

DESTINATION ${DATA_INSTALL_DIR}/kdenlive/pics)